--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <div id="skier"></div></div>
+    <div id="snow"></div>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
