--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
-    <div id="skier"></div></div>
-    <div id="snow"></div>
+    <div id="snow">
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div class="snowflake"></div>
+        <div id="skier"></div></div>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
